--- a/spel3/index.html
+++ b/spel3/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🏰 Rybergs Slott 3x3</title>
+<title>🏰 Rybergs Slott 4x4</title>
 <style>
 body{
     margin:0;
@@ -29,22 +29,29 @@ h1{
 }
 #grid{
     display:grid;
-    grid-template-columns: repeat(3, 70px);
-    grid-template-rows: repeat(3, 70px);
+    grid-template-columns: repeat(4, 80px);
+    grid-template-rows: repeat(4, 80px);
     gap:5px;
     justify-content:center;
     margin:20px 0;
 }
 .cell{
-    width:70px;
-    height:70px;
+    width:80px;
+    height:80px;
     background:#222;
     border-radius:8px;
     display:flex;
     justify-content:center;
     align-items:center;
-    font-size:36px;
+    font-size:40px;
     transition: all 0.2s ease;
+}
+.win{
+    animation: flash 0.5s ease infinite;
+}
+@keyframes flash{
+    0%,100%{background:#222;}
+    50%{background:gold;}
 }
 button{
     padding:10px 20px;
@@ -58,13 +65,21 @@ button{
 .home{background:#ff5555;}
 .stats{
     margin-top:10px;
+    font-size:18px;
+}
+.winText{
+    font-size:28px;
+    margin:10px 0;
+    color:#ff0;
+    text-shadow:0 0 15px #ff0;
 }
 </style>
 </head>
 <body>
 <div class="wrapper">
-    <h1>🏰 Rybergs Slott 3x3</h1>
+    <h1>🏰 Rybergs Slott 4x4</h1>
     <div id="grid"></div>
+    <div class="winText" id="winText"></div>
     <button class="spin" onclick="spin()">🎰 Snurra (Satsa 100 kr)</button>
     <button class="home" onclick="goHome()">← Tillbaka</button>
     <div class="stats">
@@ -74,12 +89,13 @@ button{
 </div>
 
 <script>
-const gridSize = 3;
+const gridSize = 4;
 const symbols = ["💎","👑","🍀","⭐","🗡️","🏰"];
 let grid = [];
 const gridEl = document.getElementById("grid");
 const scoreEl = document.getElementById("score");
 const highEl = document.getElementById("highscore");
+const winTextEl = document.getElementById("winText");
 let score = 1000;
 let highscore = parseInt(localStorage.getItem("slotHigh")) || score;
 highEl.textContent = highscore;
@@ -110,41 +126,32 @@ function renderGrid(){
         let r = parseInt(cell.dataset.row);
         let c = parseInt(cell.dataset.col);
         cell.textContent = grid[r][c];
+        cell.classList.remove("win");
     });
 }
 
 // ===== Check wins =====
 function checkWin(){
-    let win = false;
     let lines = [];
-
-    // rows
+    // horizontal
     for(let r=0;r<gridSize;r++){
-        if(grid[r][0]===grid[r][1] && grid[r][1]===grid[r][2]){
-            lines.push([[r,0],[r,1],[r,2]]);
-            win = true;
+        if(new Set(grid[r]).size===1){
+            lines.push([[r,0],[r,1],[r,2],[r,3]]);
         }
     }
-
-    // columns
+    // vertical
     for(let c=0;c<gridSize;c++){
-        if(grid[0][c]===grid[1][c] && grid[1][c]===grid[2][c]){
-            lines.push([[0,c],[1,c],[2,c]]);
-            win = true;
+        let col = [grid[0][c],grid[1][c],grid[2][c],grid[3][c]];
+        if(new Set(col).size===1){
+            lines.push([[0,c],[1,c],[2,c],[3,c]]);
         }
     }
-
     // diagonals
-    if(grid[0][0]===grid[1][1] && grid[1][1]===grid[2][2]){
-        lines.push([[0,0],[1,1],[2,2]]);
-        win = true;
-    }
-    if(grid[0][2]===grid[1][1] && grid[1][1]===grid[2][0]){
-        lines.push([[0,2],[1,1],[2,0]]);
-        win = true;
-    }
-
-    return {win, lines};
+    let diag1 = [grid[0][0],grid[1][1],grid[2][2],grid[3][3]];
+    if(new Set(diag1).size===1) lines.push([[0,0],[1,1],[2,2],[3,3]]);
+    let diag2 = [grid[0][3],grid[1][2],grid[2][1],grid[3][0]];
+    if(new Set(diag2).size===1) lines.push([[0,3],[1,2],[2,1],[3,0]]);
+    return lines;
 }
 
 // ===== Spin =====
@@ -153,8 +160,8 @@ function spin(){
         alert("Inte tillräckligt med pengar!");
         return;
     }
-    score -= 100; // satsa 100 kr
-
+    score -=100;
+    winTextEl.textContent="";
     // fyll grid med nya symboler
     for(let r=0;r<gridSize;r++){
         for(let c=0;c<gridSize;c++){
@@ -162,21 +169,29 @@ function spin(){
         }
     }
     renderGrid();
+    const winLines = checkWin();
+    let totalWin = 0;
 
-    // Check wins
-    const result = checkWin();
-    if(result.win){
-        // Poäng = satsning * multiplikator
-        let multiplier = Math.floor(Math.random()*5)+2; // 2x-6x
-        let winAmount = 100 * multiplier;
-        score += winAmount;
-        alert(`🎉 Du vann ${winAmount} kr!`);
+    if(winLines.length>0){
+        winLines.forEach(line=>{
+            line.forEach(([r,c])=>{
+                document.querySelector(`.cell[data-row='${r}'][data-col='${c}']`).classList.add("win");
+            });
+            // win per line: satsning * random multiplier
+            let mult = Math.floor(Math.random()*5)+2; // 2x-6x
+            totalWin += 100*mult;
+        });
+
+        score += totalWin;
+        if(totalWin>=400) winTextEl.textContent="🎉 MEGA WIN!";
+        else if(totalWin>=200) winTextEl.textContent="✨ BIG WIN!";
+        else winTextEl.textContent="🎉 WIN!";
     }
-    scoreEl.textContent = score;
 
+    scoreEl.textContent=score;
     if(score>highscore){
-        highscore = score;
-        highEl.textContent = highscore;
+        highscore=score;
+        highEl.textContent=highscore;
         localStorage.setItem("slotHigh",highscore);
     }
 }
