--- a/spel3/index.html
+++ b/spel3/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🏰 Rybergs Slott 4x4</title>
+<title>🏰 Rybergs Slott 4x4 - Gravitation & Multipliers</title>
 <style>
 body{
     margin:0;
@@ -44,7 +44,7 @@ h1{
     justify-content:center;
     align-items:center;
     font-size:40px;
-    transition: all 0.2s ease;
+    transition: all 0.3s ease;
 }
 .win{
     animation: flash 0.5s ease infinite;
@@ -107,16 +107,42 @@ function initGrid(){
     for(let r=0;r<gridSize;r++){
         grid[r]=[];
         for(let c=0;c<gridSize;c++){
-            let sym = symbols[Math.floor(Math.random()*symbols.length)];
-            grid[r][c] = sym;
+            grid[r][c]="";
             const cell = document.createElement("div");
             cell.className="cell";
             cell.dataset.row=r;
             cell.dataset.col=c;
-            cell.textContent=sym;
             gridEl.appendChild(cell);
         }
     }
+}
+
+// ===== Animate fall =====
+function dropSymbols(callback){
+    let maxSteps = gridSize;
+    let step = 0;
+
+    function stepDrop(){
+        for(let r=gridSize-1;r>=0;r--){
+            for(let c=0;c<gridSize;c++){
+                if(grid[r][c]===""){
+                    for(let rr=r-1;rr>=0;rr--){
+                        if(grid[rr][c]!==""){
+                            grid[r][c]=grid[rr][c];
+                            grid[rr][c]="";
+                            break;
+                        }
+                    }
+                }
+            }
+        }
+        renderGrid();
+        step++;
+        if(step<maxSteps){
+            requestAnimationFrame(stepDrop);
+        } else callback();
+    }
+    stepDrop();
 }
 
 // ===== Render =====
@@ -135,22 +161,18 @@ function checkWin(){
     let lines = [];
     // horizontal
     for(let r=0;r<gridSize;r++){
-        if(new Set(grid[r]).size===1){
-            lines.push([[r,0],[r,1],[r,2],[r,3]]);
-        }
+        if(new Set(grid[r]).size===1 && grid[r][0]!=="") lines.push([[r,0],[r,1],[r,2],[r,3]]);
     }
     // vertical
     for(let c=0;c<gridSize;c++){
         let col = [grid[0][c],grid[1][c],grid[2][c],grid[3][c]];
-        if(new Set(col).size===1){
-            lines.push([[0,c],[1,c],[2,c],[3,c]]);
-        }
+        if(new Set(col).size===1 && col[0]!=="") lines.push([[0,c],[1,c],[2,c],[3,c]]);
     }
     // diagonals
     let diag1 = [grid[0][0],grid[1][1],grid[2][2],grid[3][3]];
-    if(new Set(diag1).size===1) lines.push([[0,0],[1,1],[2,2],[3,3]]);
+    if(new Set(diag1).size===1 && diag1[0]!=="") lines.push([[0,0],[1,1],[2,2],[3,3]]);
     let diag2 = [grid[0][3],grid[1][2],grid[2][1],grid[3][0]];
-    if(new Set(diag2).size===1) lines.push([[0,3],[1,2],[2,1],[3,0]]);
+    if(new Set(diag2).size===1 && diag2[0]!=="") lines.push([[0,3],[1,2],[2,1],[3,0]]);
     return lines;
 }
 
@@ -162,38 +184,43 @@ function spin(){
     }
     score -=100;
     winTextEl.textContent="";
-    // fyll grid med nya symboler
+
+    // fyll tomma rutor med nya symboler
     for(let r=0;r<gridSize;r++){
         for(let c=0;c<gridSize;c++){
-            grid[r][c] = symbols[Math.floor(Math.random()*symbols.length)];
+            if(grid[r][c]==="") grid[r][c]=symbols[Math.floor(Math.random()*symbols.length)];
         }
     }
-    renderGrid();
-    const winLines = checkWin();
-    let totalWin = 0;
 
-    if(winLines.length>0){
-        winLines.forEach(line=>{
-            line.forEach(([r,c])=>{
-                document.querySelector(`.cell[data-row='${r}'][data-col='${c}']`).classList.add("win");
+    // drop animation
+    dropSymbols(()=>{
+        const winLines = checkWin();
+        let totalWin = 0;
+        if(winLines.length>0){
+            winLines.forEach(line=>{
+                // markera vinstrad
+                line.forEach(([r,c])=>{
+                    document.querySelector(`.cell[data-row='${r}'][data-col='${c}']`).classList.add("win");
+                });
+                // multipliers 3x eller 5x slumpmässigt
+                let multiplier = Math.random()<0.5?3:5;
+                totalWin += 100*multiplier;
             });
-            // win per line: satsning * random multiplier
-            let mult = Math.floor(Math.random()*5)+2; // 2x-6x
-            totalWin += 100*mult;
-        });
 
-        score += totalWin;
-        if(totalWin>=400) winTextEl.textContent="🎉 MEGA WIN!";
-        else if(totalWin>=200) winTextEl.textContent="✨ BIG WIN!";
-        else winTextEl.textContent="🎉 WIN!";
-    }
+            score += totalWin;
 
-    scoreEl.textContent=score;
-    if(score>highscore){
-        highscore=score;
-        highEl.textContent=highscore;
-        localStorage.setItem("slotHigh",highscore);
-    }
+            // Visa Mega Win/Big Win
+            if(totalWin>=400) winTextEl.textContent="🎉 MEGA WIN!";
+            else if(totalWin>=200) winTextEl.textContent="✨ BIG WIN!";
+            else winTextEl.textContent="🎉 WIN!";
+        }
+        scoreEl.textContent=score;
+        if(score>highscore){
+            highscore=score;
+            highEl.textContent=highscore;
+            localStorage.setItem("slotHigh",highscore);
+        }
+    });
 }
 
 function goHome(){
